# django-store

./: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.prod.yml  docker-compose.yml  insert_some_products.sql  pyproject.toml  pytest.ini  server-entrypoint.sh  store_db.drawio  worker-entrypoint.sh
nginx/: default.conf
store/: db.sqlite3
store/api/: my_permissions.py  urls.py  views.py
store/common/: views.py
store/orders/: admin.py  forms.py  models.py  urls.py  views.py
store/orders/migrations/: 0001_initial.py  0002_alter_order_status.py
store/orders/templates/orders/: order.html  order_create.html  orders.html  success.html
store/products/: admin.py  context_processors.py  models.py  serializers.py  tests.py  urls.py  views.py
store/products/fixtures/: category.json  productcategory.json  products.json
store/products/migrations/: 0001_initial.py  0002_basket_productbasket.py  0002_rename_category_id_productcategory_category_and_more.py  0003_remove_productcategory_category_and_more.py  0004_remove_basket_products_productbasket.py  0005_alter_productbasket_quantity.py  0006_remove_product_categories_and_more.py  0007_product_categories_delete_productcategory.py  0008_alter_category_options_alter_product_options_and_more.py  0009_remove_basket_id_alter_basket_user.py  0010_alter_product_image_alter_product_price.py
store/store/: celery.py  settings.py  urls.py
store/users/: admin.py  forms.py  models.py  tasks.py  tests.py  urls.py  views.py
store/users/migrations/: 0001_initial.py  0002_user_is_verified_email_emailverification.py
(+9 files in other folders)
