[tool.poetry]
name = "django-store"
version = "0.1.0"
description = "Store server with django"
authors = ["Vadim <sharvadim07@yandex.ru>"]
readme = "README.md"
packages = [{include = "store"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.1"
pillow = "^9.5.0"
psycopg2 = "^2.9.7"
django-allauth = "^0.56.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
